cmake_minimum_required (VERSION 3.24)

project (example_qml_minimal)
set (APP_NAME ${PROJECT_NAME})

set (CMAKE_PREFIX_PATH "~/Qt/6.5.1/gcc_64")

set (CMAKE_AUTOMOC ON)
set (CMAKE_AUTORCC ON)
set (CMAKE_CXX_STANDARD 17)
set (CMAKE_CXX_STANDARD_REQUIRED ON)

find_package (Qt6 COMPONENTS Core Gui Qml QuickControls2 QmlImportScanner)

qt_standard_project_setup(REQUIRES 6.5)

# The path to the qmake executable path needs to be passed to the Rust
# library's build script to ensure it uses the same installation of Qt as CMake.
get_target_property (QMAKE Qt::qmake IMPORTED_LOCATION)

find_package (Corrosion QUIET)
if (NOT Corrosion_FOUND)
    include (FetchContent)
    FetchContent_Declare (
        Corrosion
        GIT_REPOSITORY https://github.com/corrosion-rs/corrosion.git
        GIT_TAG v0.3.1
    )

    FetchContent_MakeAvailable (Corrosion)
endif ()

set (CRATE qml-minimal)
set (CXXQT_EXPORT_DIR "${CMAKE_CURRENT_BINARY_DIR}/cxxqt")
# Corrosion creates a CMake target with the same name as the crate.
corrosion_import_crate (MANIFEST_PATH rust/Cargo.toml CRATES ${CRATE})

# The Rust library's build script needs to be told where to output the
# generated headers so CMake can find them. To do this, tell Corrosion
# to set the CXXQT_EXPORT_DIR environment variable when calling `cargo build`.
# Also, set the QMAKE environment variable to ensure the Rust library uses
# the same installation of Qt as CMake.
corrosion_set_env_vars (${CRATE}
    "CXXQT_EXPORT_DIR=${CXXQT_EXPORT_DIR}"
    "QMAKE=${QMAKE}"
)

# Create an INTERFACE library target to link libraries to and add include paths.
# Linking this to both the application and the tests avoids having to setup
# the include paths and linked libraries for both of those.
add_library (${APP_NAME}_lib INTERFACE)

# Include the headers generated by the Rust library's build script. Each
# crate gets its own subdirectory under CXXQT_EXPORT_DIR. This allows you
# to include headers generated by multiple crates without risk of one crate
# overwriting another's files.
target_include_directories (${APP_NAME}_lib INTERFACE "${CXXQT_EXPORT_DIR}/${CRATE}")

target_link_libraries (${APP_NAME}_lib INTERFACE
    # WHOLE_ARCHIVE is needed for the generated QML plugin to register on startup,
    # otherwise the linker will discard the static variables that initialize it.
    "$<LINK_LIBRARY:WHOLE_ARCHIVE,${CRATE}-static>"
    Qt::Core
    Qt::Gui
    Qt::Qml
    Qt::QuickControls2
)

# Define the executable with the C++ source and Qt resource files
add_executable (${APP_NAME} cpp/main.cc)

qt_add_qml_module (${APP_NAME}
    URI Main
    QML_FILES "qml/Main.qml")

# Link to the Rust library
target_link_libraries (${APP_NAME} PRIVATE ${APP_NAME}_lib)

# If we are using a statically linked Qt then we need to import any qml plugins
qt_import_qml_plugins (${APP_NAME})
